# SafeKey

./: .gitignore  README.md  index.html  style.css  sw.js
.github/workflows/: build.yml
js/: analyzer.js  app.js  generator.js  vault.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
web/: index.html  manifest.json  style.css
web/js/: analyzer.js  app.js  crypto.js  generator.js  session.js  vault.js
