[package]
name = "safekey"
version = "1.0.0"
description = "SafeKey - Local Password Manager"
authors = ["Dreadonyx"]
edition = "2021"

[lib]
name = "safekey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
